--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.9",
+    "expo-av": "~13.2.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.4",
-    "expo-av": "~13.2.1"
+    "react-native": "0.71.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
