--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.4",
-    "react-native-alert-notification": "^0.3.4"
+    "react-native-alert-notification": "^0.3.4",
+    "react-native-uuid": "^2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
